--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>iTunes Music Search</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/css/materialize.min.css">
   <link rel="stylesheet" href="styles.css">
 
 </head>
+
 <body>
   <div class="container">
     <header>
-      <h1>Really Awesome Music Site</h1>
+      <h1>Music Preview</h1>
     </header>
     <section class="player">
-      <audio class="music-player media" controls="controls" src=""></audio>
+      <audio class="music-player" controls="controls" src=""></audio>
     </section>
     <hr>
     <section class="search">
@@ -20,11 +22,12 @@
         <input type="text" name="artist" value="Search Artist Here">
       </form>
     </section>
-    <section class="results"></section>
+    <section class="results row"></section>
   </div>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.1/js/materialize.min.js"></script>
   <script src="main.js"></script>
 
 </body>
+
 </html>
