every thing works

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>Music Preview</h1>
+      <h1><span>M</span>usic <span id='p'>P</span>review</h1>
     </header>
     <section class="player">
       <audio class="music-player" controls="controls" src=""></audio>
@@ -19,7 +19,7 @@
     <hr>
     <section class="search">
       <form class="search-form">
-        <input type="text" name="artist" value="Search Artist Here">
+        <input id='search' type="text" name="artist" placeholder="Search Artist Here">
       </form>
     </section>
     <section class="results row"></section>
