--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <!-- </section> -->
     </div>
     <hr>
-    <section class="searcsxh">
+    <section class="search">
       <form class="search-form">
         <input id='search' type="text" name="artist" placeholder="Search Artist Here">
       </form>
